--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fontsource/dm-sans": "^5.1.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "rheumaconnect-fe": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
