--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Deploy to Azure VM
         env:
           SSH_PRIVATE_KEY: ${{ secrets.AZURE_VM_SSH_KEY }}
+          PROD_API_URL: ${{ secrets.PROD_API_URL }}
+          STAGE_API_URL: ${{ secrets.STAGE_API_URL }}
+          STAGE_API_BASE_URL: ${{ secrets.STAGE_API_BASE_URL }}
+          PROD_API_BASE_URL: ${{ secrets.PROD_API_BASE_URL }}
         run: |
           echo "$SSH_PRIVATE_KEY" > ssh_key
           chmod 600 ssh_key
