--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fontsource/dm-sans": "^5.1.0",
     "@heroicons/react": "^2.2.0",
     "heroicons": "^2.2.0",
-    "next": "15.0.4",
+    "next": "^15.5.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rheumaconnect-fe": "file:"
